[package]
edition = "2021"
name = "gui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
minifb = "0.25.0"
piet = "0.6.2"
#enable all features
piet-common = {version = "0.6.2", features = ["png"]}
piet-direct2d = "0.6.2"
rand = "0.8.5"
rayon = "1.8.0"
