[package]
edition = "2021"
name = "gui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
piet = "0.6.2"
piet-common = {version = "0.6.2", features = ["png"]}
rstar = "0.11.0"

#do not include those on wasm build
bytemuck = {version = "1.12", features = ["derive"]}
pollster = "0.3"
rand = {version = "0.8.5", optional = true}
wgpu = "0.18"
winit = "0.28"
[lib]
crate-type = ["cdylib", "rlib"]
